<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
    <groupId>com.github</groupId>
    <artifactId>ecos</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    
    <name>ecos</name>
    <description>Second Order Cone Programming Solver for the JVM</description>
    <url>https://github.com/embotech/ecos-java-scala</url>
    
    <licenses>
      <license>
	<name>GNU General Public License (GPL)</name>
	<url>http://www.gnu.org/licenses/gpl.html</url>
	<distribution>repo</distribution>
      </license>
    </licenses>
    
    <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <java.version>1.7</java.version>
      <jblas.version>1.2.5</jblas.version>
      <scala.binary.version>2.12</scala.binary.version>
      <compiler.plugin.version>2.3.2</compiler.plugin.version>
      <dependency.plugin.version>2.6</dependency.plugin.version>
      <surefire.plugin.version>2.12</surefire.plugin.version>
      <javadoc.plugin.version>2.8</javadoc.plugin.version>
    </properties>
    
    <scm>
      <connection>scm:git:https://github.com/embotech/ecos-java-scala</connection>
      <developerConnection>scm:git:https://github.com/embotech/ecos-java-scala</developerConnection>
      <url>https://github.com/embotech/ecos-java-scala</url>
    </scm>

    <developers>
      <developer>
	<id>debasish83</id>
	<name>Debasish Das</name>
	<email>debasish.das83@gmail.com</email>
      </developer>
    </developers>
    
    <dependencies>
      <dependency>
	<groupId>org.scalanlp</groupId>
	<artifactId>breeze_2.10</artifactId>
	<version>0.8.1</version>
      </dependency>
      <dependency>
	<groupId>org.scalatest</groupId>
	<artifactId>scalatest_${scala.binary.version}</artifactId>
	<version>3.0.5</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.scala-lang</groupId>
	<artifactId>scala-library</artifactId>
	<version>2.10.3</version>
      </dependency>
      <dependency>
	<groupId>junit</groupId>
	<artifactId>junit</artifactId>
	<version>4.10</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.jblas</groupId>
	<artifactId>jblas</artifactId>
	<version>${jblas.version}</version>
      </dependency>
      <dependency>
	<groupId>com.github.fommil</groupId>
	<artifactId>jniloader</artifactId>
	<version>1.1</version>
      </dependency>
      
  </dependencies>
    <build>
      <plugins>
      <!-- compiles scala -->
        <plugin>
            <groupId>net.alchim31.maven</groupId>
            <artifactId>scala-maven-plugin</artifactId>
            <version>3.2.2</version>
            <configuration>
                <scalaVersion>${scala.version}</scalaVersion>
                <javacArgs>
                    <javacArg>-source</javacArg>
                    <javacArg>${java.version}</javacArg>
                    <javacArg>-target</javacArg>
                    <javacArg>${java.version}</javacArg>
                </javacArgs>
            </configuration>
            <executions>
                <execution>
                    <phase>compile</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
                </execution>
                <execution>
                    <id>scala-compile-first</id>
                    <phase>process-resources</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
                </execution>
                <execution>
                    <id>scala-test-compile-first</id>
                    <phase>process-test-resources</phase>
                    <goals>
                        <goal>testCompile</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <!-- compiles java -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.3</version>
            <configuration>
                <source>${java.version}</source>
                <target>${java.version}</target>
                <compilerArgs>
                    <arg>-Xlint:all,-serial</arg>
                </compilerArgs>
            </configuration>
            <executions>
                <execution>
                    <phase>compile</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>

        <!--enable surefire for java tests -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.19.1</version>
            <configuration>
                <testSourceDirectory>/src/test/java/</testSourceDirectory>
            </configuration>
        </plugin>

        <!-- enable scalatest for scala tests -->
        <plugin>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest-maven-plugin</artifactId>
            <version>1.0</version>
            <configuration>
                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                <junitxml>.</junitxml>
                <filereports>WDF TestSuite.txt</filereports>
                <argLine>-XX:MaxPermSize=256m -Xmx2g</argLine>
            </configuration>
            <executions>
                <execution>
                    <id>test</id>
                    <goals>
                        <goal>test</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>2.6</version>
            <configuration>
                <skipIfEmpty>true</skipIfEmpty>
            </configuration>
        </plugin>

       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
           <descriptors>
             <descriptor>src/main/assembly/job.xml</descriptor>
           </descriptors>
         </configuration>
       </plugin>
    </plugins>
  </build>
</project>
